general layout + picutre added

--- a/index.html
+++ b/index.html
@@ -14,20 +14,88 @@
     />
   </head>
   <body>
-    <header>
-      <h1 class="grey-text">HELLO</h1>
-    </header>
-    <div class="top-container">
-      <!-- my name -->
-      <h3 class="green-text">MY NAME IS</h3>
-      <div>
-        <h1 class="orange-text">ALEX</h1>
+    <div class="content">
+      <header>
+        <img class="foto" src="./Final_Alexander Spomer.jpg" />
+        <h1 class="grey-text">Hi,</h1>
+      </header>
+      <div class="top-container">
+        <!-- my name -->
+        <h3 class="green-text">MY NAME IS</h3>
+        <div>
+          <h1 class="orange-text" id="alex">ALEX</h1>
+        </div>
       </div>
-    </div>
-    <!-- my portfolio -->
-    <div class="portfolio">
-      <h3 class="green-text">This is my</h3>
-      <h2 class="green-text">PORTFOLIO</h2>
+      <!-- my portfolio headline-->
+      <div class="portfolio">
+        <h3 class="lavender-text">That's my</h3>
+        <h2 class="green-text">PORTFOLIO</h2>
+      </div>
+      <!-- topics -->
+      <div class="topics-all">
+        <div class="topic">
+          Working experience
+          <div class="topic-work">
+            08.2018 - ongoing
+            <div class="topic-text">
+              Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+              nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
+              erat, sed diam voluptua. At vero eos et accusam et justo duo
+              dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
+              sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit
+              amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+              invidunt ut labore et dolore magna aliquyam erat, sed diam
+              voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
+              Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum
+              dolor sit amet.
+            </div>
+          </div>
+        </div>
+        <div class="topic">
+          Education
+          <div class="topic-education">
+            09.2022 - ongoing
+            <div class="topic-text">
+              Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+              nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
+              erat, sed diam voluptua. At vero eos et accusam et justo duo
+              dolores et ea rebum.
+            </div>
+          </div>
+        </div>
+        <div class="topic">
+          Millitary
+          <div class="topic-millitary">
+            10.2011 - 07.2013
+            <div class="topic-text">
+              Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+              nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
+              erat, sed diam voluptua. At vero eos et accusam et justo duo
+              dolores et ea rebum. Lorem ipsum dolor sit amet.
+            </div>
+          </div>
+        </div>
+        <div class="topic">
+          Hobbies
+          <div class="topic-hobbies">
+            Sports
+            <div class="topic-text">
+              Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+              nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
+              erat, sed diam voluptua. At vero eos et accusam et justo duo
+              dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
+              sanctus est Lorem ipsum dolor sit amet.
+            </div>
+          </div>
+        </div>
+        <div class="topic">
+          Contact me
+          <div class="topic-contact">
+            at any time
+            <div class="topic-text">+491712111775</div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
