still strugglin on hovering

--- a/index.html
+++ b/index.html
@@ -33,67 +33,59 @@
       </div>
       <!-- topics -->
       <div class="topics-all">
-        <div class="topic">
-          Working experience
-          <div class="topic-work">
-            08.2018 - ongoing
-            <div class="topic-text">
-              Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
-              nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
-              erat, sed diam voluptua. At vero eos et accusam et justo duo
-              dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
-              sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit
-              amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
-              invidunt ut labore et dolore magna aliquyam erat, sed diam
-              voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
-              Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum
-              dolor sit amet.
-            </div>
+        <div class="topic1">Working experience</div>
+        <div class="topic2">Education</div>
+        <div class="topic3">Millitary</div>
+        <div class="topic4">Hobbies</div>
+        <div class="topic5">Contact me</div>
+      </div>
+      <!-- output text -->
+      <div class="output-text">
+        <div class="topic-work">
+          08.2018 - ongoing
+          <div class="topic-text">
+            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+            nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
+            erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
+            et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est
+            Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur
+            sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
+            et dolore magna aliquyam erat, sed diam voluptua. At vero eos et
+            accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
+            no sea takimata sanctus est Lorem ipsum dolor sit amet.
           </div>
         </div>
-        <div class="topic">
-          Education
-          <div class="topic-education">
-            09.2022 - ongoing
-            <div class="topic-text">
-              Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
-              nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
-              erat, sed diam voluptua. At vero eos et accusam et justo duo
-              dolores et ea rebum.
-            </div>
+        <div class="topic-education">
+          09.2022 - ongoing
+          <div class="topic-text">
+            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+            nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
+            erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
+            et ea rebum.
           </div>
         </div>
-        <div class="topic">
-          Millitary
-          <div class="topic-millitary">
-            10.2011 - 07.2013
-            <div class="topic-text">
-              Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
-              nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
-              erat, sed diam voluptua. At vero eos et accusam et justo duo
-              dolores et ea rebum. Lorem ipsum dolor sit amet.
-            </div>
+        <div class="topic-millitary">
+          10.2011 - 07.2013
+          <div class="topic-text">
+            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+            nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
+            erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
+            et ea rebum. Lorem ipsum dolor sit amet.
           </div>
         </div>
-        <div class="topic">
-          Hobbies
-          <div class="topic-hobbies">
-            Sports
-            <div class="topic-text">
-              Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
-              nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
-              erat, sed diam voluptua. At vero eos et accusam et justo duo
-              dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
-              sanctus est Lorem ipsum dolor sit amet.
-            </div>
+        <div class="topic-hobbies">
+          Sports
+          <div class="topic-text">
+            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+            nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
+            erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
+            et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est
+            Lorem ipsum dolor sit amet.
           </div>
         </div>
-        <div class="topic">
-          Contact me
-          <div class="topic-contact">
-            at any time
-            <div class="topic-text">+491712111775</div>
-          </div>
+        <div class="topic-contact">
+          at any time
+          <div class="topic-text">+491712111775</div>
         </div>
       </div>
     </div>
